# CalAI

./: .gitignore  README.md  pyproject.toml
backend/: agent_1.py  agent_2.py  assistant_agent.py  finance_agent.py  main.py  requirements.txt  scheduler_agent.py  search_agent.py  testapi-gpt.py  testapi.py  testgpt-chat.py  testgpt-completion.py  weather_agent.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: AddFruitForm.tsx  App.tsx  CalendarEmbbeder.tsx  DashboardElement.tsx  Fruits.tsx  Navbar.tsx  chatbot.tsx  homepage.tsx  loginpage.tsx  pagenotfound.tsx  registerpage.tsx
frontend/src/components/ui/: button.tsx
frontend/src/elements/: DashboardElement.tsx
frontend/src/pages/: Home.tsx  Login.tsx  NotFound.tsx  Register.tsx
