[project]
name = "fastapi-react"
version = "0.1.0"
description = "FastAPI + React project for hackathon"
authors = [
    {name = "Bryan Herdianto",email = "bryan.herdianto17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
